miniextendr-macros/tests/ui/option_with_value.stderr
error: unknown option; expected `return`, `dots`, `lifecycle`, or `doc`
 --> tests/ui/option_with_value.rs:5:15
  |
5 | #[miniextendr(invisible = true)]
  |               ^^^^^^^^^^^^^^^^
